resolved the label text to disappear on dark mode

--- a/custom_static/css/hardhat.css
+++ b/custom_static/css/hardhat.css
@@ -19445,6 +19445,17 @@ blockquote {
   #chatForm{
     display: flex;
     flex-direction: column;
+
+  }
+
+  .chatForm{
+    color: #000000;
+  }
+
+  .dark-mode{
+    .chatForm{
+      display: block;
+    }
   }
 
   .chatInput{
